Fixed unexpected error and Customised Security related response messages.